Fixed header margin on mobile

--- a/portfolio/assets/css/style.css
+++ b/portfolio/assets/css/style.css
@@ -337,16 +337,16 @@ textarea {
   form {
     width: 100%;
   }
-
-  header {
-    margin:
-  }
 }
 
 @media only screen and (max-width: 768px){
   .container {
     display: flex;
     flex-direction: column!important;
+    margin: 1em;
+  }
+
+  header {
     margin: 1em;
   }
 
